--- a/host_init/sample.env
+++ b/host_init/sample.env
@@ -139,5 +139,5 @@ INTERNAL_WHITELIST_CIDR=""
 
 # traefik.yaml vars
 # email used for cert expiration and misc communication with letsencrypt
-LETSENCRYPT_EMAIL="r40000@gmail.com"
+LETSENCRYPT_EMAIL=""
 
